--- a/notifico/static/css/base.css
+++ b/notifico/static/css/base.css
@@ -1,6 +1,7 @@
 :root {
     --bg-body: #EDF2F9;
-    --card-bite-bg: #FFF;
+    /* Color used for the background of primary sections */
+    --bg-segment: #FFFFFF;
     --bs-breadcrumb-divider: '>';
 }
 
@@ -14,7 +15,7 @@ body {
 
 .ex-header ol.breadcrumb {
     padding: 0.50em;
-    background-color: #f5f5f5;
+    background-color: var(--bg-segment);
     border: 1px solid #cad7e1;
 }
 
@@ -35,16 +36,68 @@ body {
 .health-warn { background-color: orange; }
 .health-bad { background-color: red; }
 
-.card-bite {
-    background-color: var(--card-bite-bg);
-    box-shadow: 0 7px 14px 0 rgba(65,69,88,.1),0 3px 6px 0 rgba(0,0,0,.07);
+.card,
+.btn {
+    border-radius: 0;
 }
 
-.card-bite .list-group-item {
-    background-color: var(--card-bite-bg);
+.card .list-group-item {
+    background-color: transparent;
+}
+
+.card-header {
+    background: transparent;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+h5.card-header,
+.card-header h5,
+h6.card-header,
+.card-header h6 {
+    font-weight: bold;
+}
+
+.card-header-link { 
+    text-decoration: none;
+    color: black;
+}
+
+.card-header-link:hover {
+    background: #d3eeff55;
+}
+
+.card .card-footer {
+    background: transparent;
+    border-top: 1px solid #e0e0e0;
+}
+
+.card .table > thead > tr {
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.card .table tbody > tr:last-child > td {
+    border-bottom: 0;
+}
+
+.card .table > thead > tr > th {
+    border: 0;
+}
+
+.card table tr > td:first-child ,
+.card table tr > th:first-child {
+    padding-left: 1rem;
+}
+
+.card table tr > td:last-child ,
+.card table tr > th:last-child {
+    padding-right: 1rem;
 }
 
 .compact {
     white-space: nowrap;
     width: 1%;
+}
+
+ul.pagination {
+    margin: 0;
 }
