--- a/notifico/templates/admin/base.html
+++ b/notifico/templates/admin/base.html
@@ -1,29 +1,31 @@
 {% extends "layouts/main.html" %}
 
 {% block content_page %}
-<div class="container">
-  {% call components.page_header(breadcrumbs) %}
-    {{ admin_title|default(_("Admin")) }}
-  {% endcall %}
+{% call components.page_header(breadcrumbs) %}
+  {{ admin_title|default(_("Admin")) }}
+{% endcall %}
 
+<div class="container">
   <div class="row">
     <nav class="col-md-3 d-block">
-      <div class="list-group py-3 px-2">
-        <a class="list-group-item list-group-item-action" href="{{ url_for(".dashboard") }}">
-          {{ _("Dashboard") }}
-        </a>
-        <a class="list-group-item list-group-item-action" href="{{ url_for(".groups") }}">
-          {{ _("Groups") }}
-        </a>
-        <a class="list-group-item list-group-item-action" href="{{ url_for(".users") }}">
-          {{ _("Users") }}
-        </a>
+      <div class="card mb-3">
+        <div class="list-group list-group-flush">
+          <a class="list-group-item list-group-item-action" href="{{ url_for(".dashboard") }}">
+            {{ _("Dashboard") }}
+          </a>
+          <a class="list-group-item list-group-item-action" href="{{ url_for(".groups") }}">
+            {{ _("Groups") }}
+          </a>
+          <a class="list-group-item list-group-item-action" href="{{ url_for(".users") }}">
+            {{ _("Users") }}
+          </a>
+        </div>
       </div>
       {% block sidebar %}
       {% endblock%}
     </nav>
     <main class="col-md-9 d-block">
-      <div class="p-3">
+      <div class="">
         {% block admin_page %}
         {% endblock %}
       </div>
