--- a/notifico/templates/admin/groups/edit.html
+++ b/notifico/templates/admin/groups/edit.html
@@ -5,55 +5,67 @@
 
 {% block admin_page %}
   <h2>{{ group.name }}</h2>
-  <p>{{ group.description|default(_("N/A")) }}</p>
+  <p>{{ group.description }}</p>
   {% if group.deletable %}
-  <h2>{{ _("Details") }}</h2>
-  <form method="POST" class="mb-3">
-    {{ details_form.hidden_tag() }}
-    {% for field in details_form if field.widget.input_type != "hidden" %}
-    {{ forms.render_field(field) }}
-    {% endfor %}
-    <div class="form-actions">
-      <button name="save-details" type="submit" class="btn btn-primary">
-        {{ _("Save Details") }}
-      </button>
-    </div>
-  </form>
-  {% endif %}
-  <h2>{{ _("Permissions") }}</h2>
-  <p>
-  {% trans %}
-  The permissions applied to this group will apply to all current members of
-  the group immediately, as well as all future members.
-  {% endtrans %}
-  </p>
-  <form method="POST">
-    <table class="table table-striped table-sm align-middle">
-      <thead>
-        <tr>
-          <th>{{ _("Permission") }}</th>
-          <th class="compact text-center">{{ _("Enabled?") }}</th>
-      </thead>
-      <tbody>
-        {{ permissions_form.hidden_tag() }}
-        {% for field in permissions_form if field.widget.input_type != "hidden" %}
-        {% set permission = permissions[field.id] %}
-        <tr>
-          <td>
-            <strong>{{ _(permission.name) }}</strong>
-            <em class="d-block text-muted">
-              {{ _(permission.description) }}
-            </em>
-          </td>
-          <td class="compact text-center">{{ field }}</td>
-        </tr>
+  <div class="card c-card mb-3">
+    <h6 class="card-header">{{ _("Details") }}</h6>
+    <div class="card-body">
+      <form method="POST" class="mb-3">
+        {{ details_form.hidden_tag() }}
+        {% for field in details_form if field.widget.input_type != "hidden" %}
+        {{ forms.render_field(field) }}
         {% endfor %}
-      </tbody>
-    </table>
-    <div class="form-actions">
-      <button name="save-permissions" type="submit" class="btn btn-primary">
-        {{ _("Save Permissions") }}
-      </button>
+        <div class="form-actions">
+          <button name="save-details" type="submit" class="btn btn-primary">
+            {{ _("Save Details") }}
+          </button>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
+  {% endif %}
+  <div class="card c-card">
+    <h6 class="card-header">{{ _("Permissions") }}</h6>
+    <div class="card-body">
+      <p>
+      {% trans %}
+      The permissions applied to this group will apply to all current members of
+      the group immediately, as well as all future members.
+      {% endtrans %}
+      </p>
+    </div>
+    <form method="POST">
+      <div class="card-body p-0">
+        <table class="table table-sm align-middle">
+          <thead>
+            <tr>
+              <th>{{ _("Permission") }}</th>
+              <th class="compact text-center">{{ _("Enabled?") }}</th>
+          </thead>
+          <tbody>
+            {{ permissions_form.hidden_tag() }}
+            {% for field in permissions_form if field.widget.input_type != "hidden" %}
+            {% set permission = permissions[field.id] %}
+            <tr>
+              <td>
+                <strong>{{ _(permission.name) }}</strong>
+                <em class="d-block text-muted">
+                  {{ _(permission.description) }}
+                </em>
+              </td>
+              <td class="compact text-center">{{ field }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <div class="card-body">
+        <div class="form-actions">
+          <button name="save-permissions" type="submit" class="btn btn-primary">
+            {{ _("Save Permissions") }}
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
 {% endblock %}
