--- a/notifico/templates/admin/groups/new.html
+++ b/notifico/templates/admin/groups/new.html
@@ -4,22 +4,26 @@
 {% from 'ui/page.html' import render_pagination %}
 
 {% block admin_page %}
-<h2>{{ _("New Group") }}</h2>
-<p>
-{% trans %}
-Create a new user-defined group to apply custom permissions and limits onto one
-or more users. You can select the permissions for this group on the next step.
-{% endtrans %}
-</p>
-<form method="POST">
-  {{ form.hidden_tag() }}
-  {% for field in form if field.widget.input_type != "hidden" %}
-  {{ forms.render_field(field) }}
-  {% endfor %}
-  <div class="form-actions">
-    <button name="create-group" type="submit" class="btn btn-primary">
-      {{ _("Create Group") }}
-    </button>
+<div class="card">
+  <h6 class="card-header">{{ _("New Group") }}</h6>
+  <div class="card-body">
+    <p>
+    {% trans %}
+    Create a new user-defined group to apply custom permissions and limits onto one
+    or more users. You can select the permissions for this group on the next step.
+    {% endtrans %}
+    </p>
+    <form method="POST">
+      {{ form.hidden_tag() }}
+      {% for field in form if field.widget.input_type != "hidden" %}
+      {{ forms.render_field(field) }}
+      {% endfor %}
+      <div class="form-actions">
+        <button name="create-group" type="submit" class="btn btn-primary">
+          {{ _("Create Group") }}
+        </button>
+      </div>
+    </form>
   </div>
-</form>
+</div>
 {% endblock %}
