--- a/notifico/templates/admin/users/list.html
+++ b/notifico/templates/admin/users/list.html
@@ -19,27 +19,51 @@
 
 
 {% block admin_page %}
-<table class="table table-striped table-sm align-middle">
-  <thead>
-    <tr>
-      <th>{{ _("Username") }}</th>
-      <th class="compact">{{ _("Joined") }}</th>
-      <th class="compact text-center">{{ _("Projects") }}</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for user in users.items %}
-    <tr>
-      <td>{{ user.username }}</td>
-      <td class="compact">
-        {{ user.joined|pretty_date }}
-      </td>
-      <td class="compact text-center">
-        {{ user.projects.count() }}
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{{ render_pagination(users, '.users') }}
+<div class="card">
+  <div class="card-body p-0">
+    <table class="table align-middle mb-0">
+      <thead>
+        <tr>
+          <th>{{ _("Username") }}</th>
+          <th class="compact">{{ _("Joined") }}</th>
+          <th class="compact text-center">{{ _("Projects") }}</th>
+          <th class="compact text-center">{{ _("Options") }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users.items %}
+        <tr>
+          <td>
+            {% if user.is_admin %}<i class="fas fa-crown"></i>&nbsp;{% endif -%}
+            <a href="{{ user.admin_edit_url }}"
+               title="{{ _("Edit User") }}">{{ user.username }}</a>
+          </td>
+          <td class="compact">
+            {{ user.joined|pretty_date }}
+          </td>
+          <td class="compact text-center">
+            {{ user.projects.count() }}
+          </td>
+          <td class="compact text-center px-3">
+            {# Cannot delete admins! #}
+            {% if not user.is_admin %}
+            <a class="btn btn-danger btn-sm"
+              href="{{ url_for('.users_delete', user_id=user.id) }}">
+              {{ _("Delete") }}
+            </a>
+            {% else %}
+            <button class="btn btn-danger btn-sm" disabled>
+              {{ _("Delete") }}
+              </a>
+              {% endif %}
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  <div class="card-footer">
+    {{ render_pagination(users, '.users') }}
+  </div>
+</div>
 {% endblock %}
