--- a/notifico/templates/sources/edit.html
+++ b/notifico/templates/sources/edit.html
@@ -4,7 +4,7 @@
 
 {% block content_page %}
 {% call components.page_header(breadcrumbs) %}
-  {{ _("Edit Provider") }}
+  {{ _("Edit Source") }}
 {% endcall %}
 
 <div class="container">
