--- a/notifico/templates/sources/get_url.html
+++ b/notifico/templates/sources/get_url.html
@@ -17,7 +17,7 @@
     </p>
     <div class="mb-3">
       <input type="text" class="form-control" id="webhook" readonly value="{{ 
-        provider.p.external_url(provider)
+        source.implementation.external_url(source)
       }}">
     </div>
     <a class="btn btn-primary" href="{{ project.details_url }}">
