--- a/notifico/templates/sources/new.html
+++ b/notifico/templates/sources/new.html
@@ -4,7 +4,7 @@
 
 {% block content_page %}
 {% call components.page_header(breadcrumbs) %}
-  {{ _("New Provider") }}
+  {{ _("New Source") }}
 {% endcall %}
 
 <div class="container">
