Rename Provider to Source [2/2], add views for runtime management of Sources. Add views for Logs.

--- a/notifico/templates/admin/base.html
+++ b/notifico/templates/admin/base.html
@@ -22,6 +22,9 @@
           <a class="list-group-item list-group-item-action" href="{{ url_for(".sources") }}">
             <i class="fas fa-link fa-fw"></i> {{ _("Sources") }}
           </a>
+          <a class="list-group-item list-group-item-action" href="{{ url_for(".logs") }}">
+            <i class="fas fa-scroll fa-fw"></i> {{ _("Logs") }}
+          </a>
         </div>
       </div>
       {% block sidebar %}
