--- a/notifico/templates/admin/groups/list.html
+++ b/notifico/templates/admin/groups/list.html
@@ -44,7 +44,7 @@
 {% block admin_page %}
 {% if page <= 1 %}
 <div class="card c-card mb-3">
-  <div class="card-header d-flex justify-content-between align-items-center">
+  <div class="card-header">
     <h6 class="card-title mb-0">{{ _("Core Groups") }}</h6>
   </div>
   <div class="card-body">
