--- a/notifico/templates/sources/choose.html
+++ b/notifico/templates/sources/choose.html
@@ -10,25 +10,26 @@
 <div class="container">
   <div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
     {% for source in sources %}
+    {% set impl = source.impl %}
     <div class="col">
       <div class="card card-bite h-100">
         <div class="card-body">
           <div class="card-title">
-            <h5>{{ source.SOURCE_NAME }}</h5>
+            <h5>{{ impl.SOURCE_NAME }}</h5>
           </div>
           <div class="card-text">
-            {{ source.SOURCE_DESCRIPTION }}
+            {{ impl.SOURCE_DESCRIPTION }}
             <div class="pt-3">
               <a class="btn btn-primary" href="{{ url_for('.new_source',
                   project=project,
-                  source_impl=source.SOURCE_ID) }}">
+                  source_impl=impl.SOURCE_ID) }}">
                 {{ _("Add") }}
               </a>
             </div>
           </div>
         </div>
         <div class="card-footer text-muted">
-          {% set source_type = source.SOURCE_TYPE.value %}
+          {% set source_type = impl.SOURCE_TYPE.value %}
           {% if source_type == 1 %}
           <small>{{ _("This source is a webhook.") }}</small>
           {% elif source_type == 2 %}
