--- a/notifico/templates/projects/get.html
+++ b/notifico/templates/projects/get.html
@@ -101,14 +101,14 @@
   <table class="table table-striped table-small">
     <thead>
       <tr>
-        <th>{{ _("When") }}</th>
+        <th class="compact">{{ _("When") }}</th>
         <th>{{ _("Summary") }}</th>
       </tr>
     </thead>
     <tbody>
       {% for log in project_logs.items %}
       <tr class="table-{{ components.log_to_suffix(log) }}">
-        <td>{{ log.created|pretty_date|capitalize }}</td>
+        <td class="compact">{{ log.created|pretty_date|capitalize }}</td>
         <td>
           {{ _(log.summary, **log.payload) }}
         </td>
