Add delete for sources on projects.

--- a/notifico/templates/projects/get.html
+++ b/notifico/templates/projects/get.html
@@ -68,7 +68,9 @@
           <a class="card-link" href="{{ source.edit_url }}">
             {{ _("Edit") }}
           </a>
-          <a href="#" class="card-link">{{ _("Delete") }}</a>
+          <a class="card-link" href="{{ source.delete_url }}">
+            {{ _("Delete") }}
+          </a>
         </div>
       </div>
     </div>
