--- a/notifico/templates/admin/base.html
+++ b/notifico/templates/admin/base.html
@@ -19,8 +19,8 @@
           <a class="list-group-item list-group-item-action" href="{{ url_for(".users") }}">
             <i class="fas fa-user fa-fw"></i> {{ _("Users") }}
           </a>
-          <a class="list-group-item list-group-item-action" href="{{ url_for(".sources") }}">
-            <i class="fas fa-link fa-fw"></i> {{ _("Sources") }}
+          <a class="list-group-item list-group-item-action" href="{{ url_for(".plugins") }}">
+            <i class="fas fa-microchip fa-fw"></i> {{ _("Plugins") }}
           </a>
           <a class="list-group-item list-group-item-action" href="{{ url_for(".logs") }}">
             <i class="fas fa-scroll fa-fw"></i> {{ _("Logs") }}
