--- a/notifico/templates/sources/edit.html
+++ b/notifico/templates/sources/edit.html
@@ -8,9 +8,27 @@
 {% endcall %}
 
 <div class="container">
-  <div class="card">
+  {% if impl.SOURCE_TYPE.name == 'WEBHOOK' %}
+  <div class="lead-container d-flex w-100 p-3 text-center">
+    <main class="mx-auto">
+      <h2>{{ _("Your webhook is ready") }}</h2>
+      <p>
+      {% trans %}
+      You'll need to configure the service to use the webhook URL provided below:
+      {% endtrans %}
+      </p>
+      <div class="mb-3">
+        <input type="text" class="form-control" id="webhook" readonly value="{{ 
+          impl.external_url(source)
+        }}">
+      </div>
+    </main>
+  </div>
+  {% endif %}
+
+  <div class="card mb-3">
     <div class="card-header">
-      <h5 class="card-title mb-0">{{ _("Settings") }}</h5>
+      <h6 class="card-title mb-0">{{ _("Settings") }}</h6>
     </div>
     <div class="card-body">
       <form method="POST">
@@ -25,6 +43,23 @@
         </div>
       </form>
     </div>
+  </div>
+
+  <div class="card mb-3">
+    <div class="card-header">
+      <h6 class="card-title">{{ _("Logs") }}</h6>
+    </div>
+    {% if logs.count() %}
+    <table class="table table-striped table-small mb-0">
+      {{ components.simple_log_table(logs) }}
+    </table>
+    {% else %}
+    <div class="card-body">
+      <div class="alert alert-info mb-0">
+        {{ _("Nothing has happened yet.") }}
+      </div>
+    </div>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
