--- a/notifico/templates/projects/dashboard.html
+++ b/notifico/templates/projects/dashboard.html
@@ -48,7 +48,7 @@
           </li>
           <li class="list-group-item text-muted">
             <i class="fas fa-link"></i>&nbsp;
-            {{ _("%(count)s sources", count=project.sources.count()) }}
+            {{ _("%(count)s sources", count=project.channels.count()) }}
           </li>
           <li class="list-group-item text-muted">
             <i class="fas fa-envelope"></i>&nbsp;
