--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -23,6 +23,7 @@
     {% block style %}
     {% endblock style %}
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
