--- a/notifico/templates/public/landing.html
+++ b/notifico/templates/public/landing.html
@@ -22,6 +22,32 @@
   {% endif %}
 </div>
 <div class="row-fluid">
+  <div class="span4">
+    <div class="stats-box">
+      <div class="stats-value">
+        {{ total_messages }}
+      </div>
+      <span class="muted">Messages Delivered</span>
+    </div>
+  </div>
+  <div class="span4">
+    <div class="stats-box">
+      <div class="stats-value">
+        {{ total_users }}
+      </div>
+      <span class="muted">Users</span>
+    </div>
+  </div>
+  <div class="span4">
+    <div class="stats-box">
+      <div class="stats-value">
+        {{ total_networks }}
+      </div>
+      <span class="muted">IRC Networks</span>
+    </div>
+  </div>
+</div>
+<div class="row-fluid">
   <div class="span6">
     {# Show recently sent messages from public channels. #}
     <h3>Newest Projects</h3>
