--- a/notifico/templates/public/landing.html
+++ b/notifico/templates/public/landing.html
@@ -4,9 +4,8 @@
 <div class="landing-unit">
   <h1 class="landing-unit-title">Notifico</h1>
   <p class="lead">
-    Notifico is an <a href="https://github.com/TkTech/notifico">open-source</a> replacement
-    for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives 
-    messages from services and scripts and delivers them to IRC channels.
+    Notifico is an open-source project that relays webhooks from common services to IRC
+    networks, such as GitHub, JIRA, Gitea, Jenkins, and Bitbucket.
   </p>
   {% if not g.user %}
   <p>
@@ -48,58 +47,31 @@
   </div>
 </div>
 <div class="row-fluid">
-  <div class="span6">
-    {# Show recently sent messages from public channels. #}
-    <h3>Newest Projects</h3>
-    <div class="section-content">
-      <table class="table table-striped table-vertical table-bordered">
-        <thead>
-          <tr>
-            <th>Created</th>
-            <th>Name</th>
-            <th>Messages</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for project in new_projects.items %}
-          <tr>
-            <td nowrap>{{ project.created|pretty_date }}</td>
-            <td style="width: 100%;">
-              {{ repo_link(project) }}
-            </td>
-            <td style="text-align: center;">{{ project.message_count }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
+  <div class="span4">
+    <div class="stats-box">
+      <div class="stats-value">
+        {{ total_projects }}
+      </div>
+      <span class="muted">Projects</span>
     </div>
   </div>
-  <div class="span6">
-    <h3>Top Networks</h3>
-    <div class="section-content">
-      <table class="table table-striped table-vertical table-bordered">
-        <thead>
-          <tr>
-            <th>Host</th>
-            <th>Channels</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for network, count in top_networks %}
-          <tr>
-            <td style="width: 100%;">{{ network }}</td>
-            <td  nowrap style="text-align: center;">
-              <a href="{{ url_for('.network', network=network) }}">
-                {{ count }}
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <a class="btn btn-info" href="{{ url_for('.networks') }}">See All {{ total_networks }} Networks</a>
+  <div class="span4">
+    <div class="stats-box">
+      <div class="stats-value">
+        {{ total_channels }}
+      </div>
+      <span class="muted">Channels</span>
     </div>
   </div>
 </div>
+<h4>Supported Services</h4>
+{% for row in services.values()|slice(3) %}
+<div class="row-fluid">
+  {% for service in row %}
+    <div class="span4">
+      {{ service.SERVICE_NAME }}
+    </div>
+  {% endfor %}
+</div>
+{% endfor %}
 {% endblock %}
